<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:layoutDirection="ltr"
    >

    <LinearLayout
        android:id="@+id/pickerWrapper"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        >

        <com.henninghall.date_picker.pickers.AndroidNative
            android:id="@+id/year"
            android:theme="@style/DatePickerTheme"
            style="@style/android_native"
            android:tag="year"
            android:contentDescription="@string/year_description"
            android:focusable="true"
            android:focusableInTouchMode="true" />

        <com.henninghall.date_picker.pickers.AndroidNative
            android:id="@+id/month"
            android:theme="@style/DatePickerTheme"
            style="@style/android_native"
            android:tag="month"
            android:contentDescription="@string/month_description"
            android:focusable="true"
            android:focusableInTouchMode="true" />

        <com.henninghall.date_picker.pickers.AndroidNative
            android:id="@+id/date"
            android:theme="@style/DatePickerTheme"
            style="@style/android_native_small"
            android:tag="date"
            android:contentDescription="@string/date_description"
            android:focusable="true"
            android:focusableInTouchMode="true" />

        <com.henninghall.date_picker.pickers.AndroidNative
            android:id="@+id/durationDays"
            android:theme="@style/DatePickerTheme"
            style="@style/android_native_medium"
            android:tag="durationDays"
            android:contentDescription="@string/days_description"
            android:focusable="true"
            android:focusableInTouchMode="true" />

        <com.henninghall.date_picker.Label
            android:id="@+id/labelDate"
            android:text="@string/label_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/DatePickerTheme"
            android:tag="labelDate" />


        <com.henninghall.date_picker.pickers.AndroidNative
            android:id="@+id/day"
            android:theme="@style/DatePickerTheme"
            style="@style/android_native"
            android:tag="day"
            android:contentDescription="@string/day_description"
            android:focusable="true"
            android:focusableInTouchMode="true" />

        <com.henninghall.date_picker.pickers.AndroidNative
            android:id="@+id/days"
            android:theme="@style/DatePickerTheme"
            style="@style/android_native"
            android:tag="days"
            android:contentDescription="@string/day_description"
            android:focusable="true"
            android:focusableInTouchMode="true" />

        <com.henninghall.date_picker.pickers.AndroidNative
            android:id="@+id/hour"
            android:theme="@style/DatePickerTheme"
            style="@style/android_native_small"
            android:tag="hour"
            android:contentDescription="@string/hour_description"
            android:focusable="true"
            android:focusableInTouchMode="true" />

        <com.henninghall.date_picker.pickers.AndroidNative
            android:id="@+id/durationHours"
            android:theme="@style/DatePickerTheme"
            style="@style/android_native_medium"
            android:tag="durationHours"
            android:contentDescription="@string/hour_description"
            android:focusable="true"
            android:focusableInTouchMode="true" />

        <com.henninghall.date_picker.Label
            android:id="@+id/labelHour"
            android:text="@string/label_hour"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/DatePickerTheme"
            android:tag="labelHour" />

        <com.henninghall.date_picker.pickers.AndroidNative
            android:id="@+id/minutes"
            android:theme="@style/DatePickerTheme"
            style="@style/android_native_small"
            android:tag="minutes"
            android:contentDescription="@string/minutes_description"
            android:focusable="true"
            android:focusableInTouchMode="true" />

        <com.henninghall.date_picker.pickers.AndroidNative
            android:id="@+id/durationMinutes"
            android:theme="@style/DatePickerTheme"
            style="@style/android_native_medium"
            android:tag="durationMinutes"
            android:contentDescription="@string/minutes_description"
            android:focusable="true"
            android:focusableInTouchMode="true" />

        <com.henninghall.date_picker.Label
            android:id="@+id/labelMinutes"
            android:text="@string/label_minute"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/DatePickerTheme"
            android:tag="labelMinutes" />

        <com.henninghall.date_picker.pickers.AndroidNative
            android:id="@+id/ampm"
            android:theme="@style/DatePickerTheme"
            style="@style/android_native"
            android:tag="ampm"
            android:contentDescription="@string/ampm_description"
            android:focusable="true"
            android:focusableInTouchMode="true" />
    </LinearLayout>

</LinearLayout>
